--- a/AAI-510_FinalProject_Group_12.ipynb
+++ b/AAI-510_FinalProject_Group_12.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Title: Predicting Long-Term Productivity of Software Engineers"
+    "# AAI-510 Project Title: Predicting Long-Term Productivity of Software Engineers"
    ]
   },
   {
